--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 * {
-    width: 900px;
+    width: 85%;
     margin: auto;
 }
 #menu {
@@ -9,6 +9,7 @@
 }
 #menu img {
     width: 23%;
+    padding-top: 50px;
     margin: auto;
     display: block;
 }
