--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 }
 #menu {
     background-image: url("./Assets/backgrounds/landing.jpg");
-    height: 400px;
+    height: 450px;
     background-size: cover;
 }
 #menu img {
@@ -20,4 +20,7 @@
 }
 #menu p span {
     font-weight: bold;
+}
+#menu-options {
+    display: flex;
 }
