Adds a background image on the foodsbg div

--- a/index.css
+++ b/index.css
@@ -39,3 +39,6 @@
 #dinner {
     background-image: url("./Assets/foodtop/dinner2.jpg");
 }
+#foodsbg {
+    background-image: url("./Assets/backgrounds/foodsBg.jpg");
+}
