--- a/index.css
+++ b/index.css
@@ -1,14 +1,10 @@
-* {
-    width: 85%;
-    margin: auto;
-}
 #menu {
     background-image: url("./Assets/backgrounds/landing.jpg");
     height: 450px;
     background-size: cover;
 }
 #menu img {
-    width: 23%;
+    width:;
     padding-top: 50px;
     margin: auto;
     display: block;
@@ -19,10 +15,20 @@
     font-size: 24px;
 }
 #menu p span {
-    font-weight: bold;
+    font-weight: bolder;
 }
 #menu-options {
     display: flex;
+}
+.options {
+    flex: 25%;
+}
+.menu-options {
+    margin: 0px;
+    height: 100px;
+    text-align: center;
+    padding: 10%;
+    box-sizing: border-box;
 }
 #happy-hour {
     background-color: slategray;
@@ -30,22 +36,95 @@
 #party-time {
     background-color: orangered;
 }
+.food {
+    height: 200px;
+    text-align: center;
+    box-sizing: border-box;
+}
+#fastfoods {
+    margin: 100px;
+}
+.fastfoods{
+    width: 50%;
+    display: block;
+    border: 1px solid #ddd;
+}
+/*.fastfood1 {
+    display: block;
+}
+
+.fastfoods2 {
+
+}*/
+.drinks {
+    width: 50%;
+}
+#drinks {
+    display: flex;
+}
+#second {
+    border: 4px black solid;
+}
 #breakfast {
     background-image: url("./Assets/foodtop/breakfast.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #lunch {
     background-image: url("./Assets/foodtop/lunch.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #dinner {
     background-image: url("./Assets/foodtop/dinner2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#foodscroll {
+    display: flex;
+    justify-content: center;
+}
+#foodscroll>div {
+    margin-right: 30px;
+    margin-left: 0px;
 }
 #foodsbg {
     background-image: url("./Assets/backgrounds/foodsBg.jpg");
+    height: 450px;
+    border: rgba(0, 0, 0, 0.253) solid;
+}
+.food-div {
+    background-color: beige;
+    width: 80%;
+    margin: auto;
+    margin-top: 55px;
+}
+.food-div>div {
+    text-align: center;
+    display: flex;
+}
+.food-div>div>p {
+    flex: 25%;
+}
+#customers {
+    display: flex;
+}
+.customers-holder {
+    display: flex;
+}
+.customers-holder img {
+    height: 70px;
 }
 #subscribe {
     background-image: url("./Assets/backgrounds/subscribe.jpg");
-    width: 100%;
+    height: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #footer {
     background-color: tomato;
+}
+#footer>div {
+    display: flex;
+    align-content: center;
 }
