--- a/index.css
+++ b/index.css
@@ -50,9 +50,9 @@
     margin: auto;
 }
 .fastfoods{
-    width: 50%;
-    display: block;
-    border: 1px solid #ddd;
+    /*width: 50%;
+    background-size: cover;
+    border: 4px solid #ddd;*/
 }
 #second {
     width: 400px;
@@ -61,6 +61,10 @@
 }
 .second {
     text-align: right;
+}
+.galimages {
+    color: #F25C2A;
+    border: 2px solid #F25C2A;
 }
 #drinks {
     display: flex;
@@ -157,21 +161,40 @@
 }
 #subscribe {
     background-image: url("./Assets/backgrounds/subscribe.jpg");
-    height: 300px;
+    height: 350px;
     background-repeat: no-repeat;
     background-size: cover;
-    line-height: 300px;
     text-align: center;
     color: blanchedalmond;
-    font-size: 24px;
+    font-size: 28px;
+    display: flexbox;
+    padding-top: 100px;
+    box-sizing: border-box;                      
+}
+input {
+    background-color:;
+    height: 50px;
+    margin-right: 15px;
+    border-radius: 7px;
+}
+.emailinput {
+    background-color:rgba(141, 135, 135,0.5);
+    width: 23%;
+}
+.submit {
+    background-color: #F15A29;
+    width: 11%;
 }
 #footer {
+    color: whitesmoke;
     background-color: #F15A29;
+    padding: 20px;
+    font-weight: bold;
 }
 #footer>div {
     display: flex;
     justify-content: center;
 }
 .imagelinks>img {
-    margin-right: 5px;
+    margin-right: 10px;
 }
