--- a/index.css
+++ b/index.css
@@ -57,7 +57,6 @@
 #second {
     width: 400px;
     padding: 50px;
-
 }
 .second {
     text-align: right;
@@ -93,6 +92,12 @@
 #foodscroll>div {
     margin-right: 30px;
     margin-left: 0px;
+}
+.hrf {
+    border: #F25C2A solid 2px;
+    color: #F25C2A;
+    padding: 5px;
+    text-decoration: unset;
 }
 #foodsbg {
     background-image: url("./Assets/backgrounds/foodsBg.jpg");
@@ -212,11 +217,11 @@ input {
 }
 .emailinput {
     background-color:rgba(141, 135, 135,0.5);
-    width: 13%;
+    width: 23%;
 }
 .submit {
     background-color: #F15A29;
-    width: 9%;
+    width: 13%;
 }
 #footer {
     color: whitesmoke;
@@ -230,22 +235,3 @@ input {
 .imagelinks>img {
     margin-right: 10px;
 }
-/*#subscribe {
-    background-image: url("./Assets/backgrounds/subscribe.jpg");
-    height: 300px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    text-align: center;
-    color: blanchedalmond;
-    font-size: 24px;
-}
-#footer {
-    background-color: #F15A29;
-}
-#footer>div {
-    display: flex;
-    justify-content: center;
-}
-.imagelinks>img {
-    margin-right: 5px;
-}*/
