--- a/index.css
+++ b/index.css
@@ -19,6 +19,7 @@
 }
 #menu-options {
     display: flex;
+    font-size: 22px;
 }
 .options {
     flex: 25%;
@@ -43,6 +44,9 @@
     text-align: center;
     padding-top: 50px;
     box-sizing: border-box;
+}
+.option:hover {
+    opacity: 0.7;
 }
 #fastfoods {
     margin: 100px;
@@ -88,6 +92,7 @@
     display: flex;
     justify-content: center;
     margin-top: 30px;
+    color: #F25C2A;
 }
 #foodscroll>div {
     margin-right: 30px;
@@ -142,6 +147,9 @@
     margin-bottom: 90px;
     text-align: center;
 }
+.george {
+    flex-grow: 0.1;
+}
 .customers {
     width: 60%;
     padding-bottom: 10px;
@@ -156,6 +164,7 @@
 }
 .customers-holder img {
     height: 70px;
+    margin-right: 5px;
 }
 .about {
     padding-left: 30px;
@@ -214,6 +223,8 @@ input {
     height: 50px;
     margin-right: 15px;
     border-radius: 7px;
+    color: white;
+    font-size: 18px;
 }
 .emailinput {
     background-color:rgba(141, 135, 135,0.5);
@@ -227,6 +238,11 @@ input {
     color: whitesmoke;
     background-color: #F15A29;
     padding: 20px;
+}
+#footmenu {
+    font-weight: bolder;
+    margin-left: 10px;
+    font-size: 20px;
 }
 #footer>div {
     display: flex;
